Further improvements/fixes for multiple choice / overlapping possible choices.

--- a/core-bc/modules/web/src/main/webapp/resources/default/1_0/css/custom.css
+++ b/core-bc/modules/web/src/main/webapp/resources/default/1_0/css/custom.css
@@ -44,7 +44,6 @@ html, body {
     background-image: -webkit-linear-gradient(#128693, #006a7b);
     background-image: linear-gradient(#128693, #006a7b);
     color: #ffffff;
-    font-style: italic;
 }
 
 .avrop-table td {
